--- a/juego.html
+++ b/juego.html
@@ -6,10 +6,14 @@
   </head>
   <body>
     <div class="game_board_wrap">
+      
       <img class="logo" src="./assets/logo.png" alt="logo" width="250" />
-      <div id="game_board"></div>
+      <button class="jugar"></button>
+      <div id="game_board" hidden></div>
+      <div class="lose_screen" hidden>Perdiste</div>
     </div>
 
     <script src="main.js"></script>
   </body>
+  <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
 </html>
