--- a/juego.html
+++ b/juego.html
@@ -8,12 +8,14 @@
     <div class="game_board_wrap">
       
       <img class="logo" src="./assets/logo.png" alt="logo" width="250" />
-      <button class="jugar"></button>
-      <div id="game_board" hidden></div>
+      <button class="jugar" id="boton">Jugar</button>
+      <div id="game_board" ></div>
       <div class="lose_screen" hidden>Perdiste</div>
     </div>
 
-    <script src="main.js"></script>
+    
   </body>
-  <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js" integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+  <script src="main.js"></script>
+  <script src="animaciones.js"></script>
 </html>
