--- a/juego.html
+++ b/juego.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Tetris Game</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-  </head>
-  <body>
-    <div class="game_board_wrap">
-      
-      <img class="logo" src="./assets/logo.png" alt="logo" width="250" />
-      <button class="jugar" id="boton">Jugar</button>
-      <div id="game_board"></div>
-      <div class="lose_screen" hidden>Perdiste</div>
-    </div>
 
-    
-  </body>
-  <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-  <script src="main.js"></script>
-  <script src="animaciones.js"></script>
+<head>
+  <title>Tetris Game</title>
+  <link rel="stylesheet" type="text/css" href="style.css" />
+</head>
+
+<body>
+  <div class="game_board_wrap">
+
+    <img class="logo" src="./assets/logo.png" alt="logo" width="250" />
+    <button class="jugar" id="boton">Jugar</button>
+  </div>
+  <div>
+    <div id="game_board"></div>
+  </div>
+</body>
+<script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
+  crossorigin="anonymous"></script>
+<script src="main.js"></script>
+<script src="animaciones.js"></script>
+
 </html>
